src/test/test-models/bad/lang/bad3.stan
data { real a; matrix(2,3) b; } model { a = b; }